--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
