--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
-BOT_TOKEN="MTEyNzUzNzk3NDQxOTEzNjY0Ng.GSKVU4.TdCbBMDeph8vGgXU-hXEAxeLUsYy8cZ8kg6API"
-GUILD_ID="1090929640987693128"
-APPLICATION_ID="1127537974419136646"
-PG_USER ="postgres"
-PG_HOST="db.erpaopnpderffftzkewx.supabase.co"
-PG_DATABASE="postgres"
-PG_PASSWORD="OB5J1blwNpA52cYT"
-PG_PORT= "5432"
+BOT_TOKEN=""
+APPLICATION_ID=""
