--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
+    "skipLibCheck": true,
+    "types": ["@types/discord.js"],
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
