--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.2"
+    "@types/pg": "^8.10.2",
+    "pm2": "^5.3.0"
   }
 }
