--- a/pm2_config.json
+++ b/pm2_config.json
@@ -1,9 +1,9 @@
 {
     "apps": [
         {
-            "name": "fear_greed_bot",
-            "script": "npm",
-            "args" : "run start",
+            "name": "fear_greed_index",
+            "script": "deno",
+            "args" : "task run_bot",
             "watch": ["./"],
             "watch_delay": 1000
         }
