--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,6 @@
     "./": "./"
   },
   "tasks": {
-    "run_bot": "deno run -A --unstable /src/bot.ts",
-    "remove_duplicated_follow_id": "deno run -A --unstable /components/removeDuplicateFollowIDs.ts"
+    "run_bot": "denon run -A --unstable /src/bot.ts"
   }
 }
