--- a/package.json
+++ b/package.json
@@ -2,22 +2,13 @@
   "name": "fear",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/bot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/bot.ts"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^20.4.1",
-    "axios": "^1.4.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
   "devDependencies": {
     "@types/pg": "^8.10.2",
     "pm2": "^5.3.0"
